--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: #080800; /* Background color for the body */
     color: #fff; /* Text color for the body */
@@ -301,6 +305,11 @@ nav ul li a:hover::after {
     font-size: 25px;
 }
 
+.contact-left a {
+    text-decoration: none;
+    color: #fff;
+}
+
 .social-icons {
     margin-top: 30px;
 }
@@ -345,4 +354,87 @@ form .btn2 {
     padding: 14px 60px;
     margin-top: 20px;
     cursor: pointer;
+}
+
+/* --------css for small screens----------- */
+nav .fa-solid {
+    display: none;
+}
+
+@media only screen and (max-width: 600px) {
+    #header {
+        background-image: url(images/phone-background.png);
+    }
+
+    .header-text {
+        margin-top: 100%;
+        font-size: 16px;
+    }
+
+    .header-text h1 {
+        font-size: 20px;
+    }
+
+    nav .fa-solid {
+        display: block;
+        font-size: 25px;
+    }
+
+    nav ul {
+        background: #ff004f;
+        position: fixed;
+        top: 0;
+        right: -200px; /* Hide the menu list */
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2; /* Sets the stacking order of the navigation list relative to other elements on the page. Elements with a higher z-index value will appear in front of elements with lower values. */
+        transition: right 0.5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 25px;
+    }
+
+    nav .fa-solid {
+        cursor: pointer;
+    }
+
+    nav ul .fa-solid {
+        position: absolute;
+        top: 25px;
+        left: 25px;
+    }
+
+    .subtitle {
+        font-size: 40px;
+    }
+
+    .about-col-1, .about-col-2 {
+        flex-basis: 100%;
+    }
+
+    .about-col-1 {
+        margin-bottom: 30px;
+    }
+
+    .about-col-2 {
+        font-size: 14px;
+    }
+
+    .tab-link {
+        font-size: 16px;
+        margin-right: 20px;
+    }
+
+    .contact-left, .contact-right {
+        flex-basis: 100%;
+    }
+}
+
+#msg {
+    color: #61b752;
+    margin-top: -40px;
+    display: block;
 }
